// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message MeasurementData {
  int64 external_measurement_consumer_id = 1;
  int64 external_measurement_id = 2;

  bool is_direct = 3;
  // `REACH_AND_FREQUENCY`, `REACH`, `IMPRESSION`, `DURATION`, or `POPULATION`
  string measurement_type = 4;

  // `SUCCEEDED`, `FAILED`, or `CANCELLED`
  string state = 5;

  // in microseconds
  int64 create_time = 6;
  // in microseconds
  int64 update_time = 7;
  // in milliseconds
  int64 update_time_minus_create_time = 8;
  int64 update_time_minus_create_time_squared = 9;
}

message RequisitionData {
  int64 external_measurement_consumer_id = 1;
  int64 external_measurement_id = 2;
  int64 external_requisition_id = 3;
  int64 external_data_provider_id = 4;

  bool is_direct = 5;
  // `REACH_AND_FREQUENCY`, `REACH`, `IMPRESSION`, `DURATION`, or `POPULATION`
  string measurement_type = 6;

  // `PENDING_PARAMS`, `UNFULFILLED`, `FULFILLED`, or `REFUSED`
  string state = 7;

  // in microseconds
  int64 create_time = 8;
  // in microseconds
  int64 update_time = 9;
  // in milliseconds
  int64 update_time_minus_create_time = 10;
  int64 update_time_minus_create_time_squared = 11;
}

message ComputationParticipantData {
  int64 external_measurement_consumer_id = 1;
  int64 external_measurement_id = 2;
  int64 external_computation_id = 3;
  string external_duchy_id = 4;

  // `LIQUID_LEGIONS_V2`, `LIQUID_LEGIONS_V2_REACH_ONLY`, `DIRECT`, or
  // `HONEST_MAJORITY_SHARE_SHUFFLE`
  string duchy_protocol_config = 5;
  // `REACH_AND_FREQUENCY`, `REACH`, `IMPRESSION`, `DURATION`, or `POPULATION`
  string measurement_type = 6;

  // `CREATED`, `REQUISITION_PARAMS_SET`, `READY`, or `FAILED`
  string state = 7;

  // in microseconds
  int64 create_time = 8;
  // in microseconds
  int64 update_time = 9;
  // in milliseconds
  int64 update_time_minus_create_time = 10;
  int64 update_time_minus_create_time_squared = 11;
}

message LatestMeasurementRead {
  // Since BigQuery timestamp is microsecond precision, this is in nanoseconds
  // and is stored as an integer.
  int64 update_time = 1;
  int64 external_measurement_consumer_id = 2;
  int64 external_measurement_id = 3;
}
